--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -18,16 +18,18 @@
       <li><a href="google.com">Settings</a></li>
     </ul>
   </div>
-  <div class="content">
-    <img src="./logo.png" alt="">
-    <div class="input">
-      <input type="text">
+  <div class="main-content">
+    <div class="content">
+      <img src="./logo.png" alt="">
+      <div class="input">
+        <input type="text">
+      </div>
+      <div class="buttons">
+        <button>Do the thing!</button>
+        <button>Do the other thing!</button>
+      </div>
     </div>
-    <div class="buttons">
-      <button>Do the thing!</button>
-      <button>Do the other thing!</button>
-    </div>
-  </div>
+  </div>  
   <div class="footer">
     <ul class="left-links">
       <li><a href="google.com">Advertising</a></li>
